
cc_library(
	name = "crc",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_mpl//:mpl"
	],
)
